# environments-agent

./: .gitignore  example.agent.sphere  meson.build
compiler/: README.md  ast.c  ast.h  codegen.c  codegen.h  compiler.c  compiler.h  grammar.c  grammar.h  lexer.c  lexer.h  parser.c  parser.h
linker/: linker.c  linker.h
